sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
	var x:Boolean=true
	do{x=false
		for(i<-0 to getNombreValeurs()-2){
			if(!plusPetit(i,i+1)){
				echange(i,i+1)
				x=true
			}
			if(x==false) return
		}
		for(i<-getNombreValeurs()-2 to 0){
			if(!plusPetit(i,i+1)){
				echange(i,i+1)
				x=true
			}
			if(x==false)return
			
		}
		
	}
	
}
